frontend/src/app/modules/policy-engine/policies/policies.component.scss
/* ... */
.dropdown-item-title {
    color: #0031ff;
    font-family: Inter, sans-serif;
    font-size: 14px;
    font-style: normal;
    font-weight: 600;
}

.dropdown-item-description {
    color: #848fa9;
    font-family: Inter, sans-serif;
    font-size: 12px;
    font-style: normal;
    font-weight: 400;
}

.chip {
    display: inline;
    padding: 6px 10px;
    border-radius: 6px;
    font-family: Inter;
    font-size: 14px;
    font-style: normal;
    font-weight: 500;
    line-height: 16px;
    color: var(--color-grey-6, #848fa9);
    background: var(--color-grey-3, #e1e7ef);
}

.chip-color-grey {
    color: var(--color-grey-6, #848fa9);
    background: var(--color-grey-3, #e1e7ef);
}

.chip-color-blue {
    color: var(--guardian-primary-color, #0031ff);
    background: rgba(6, 129, 238, 0.16);
}

.chip-color-green {
    color: #19be47;
    background: #cafdd9;
}

.chip-color-red {
    color: var(--color-accent-red-1);
    background: var(--color-accent-red-2);
}

.chip-color-yellow {
    color: var(--color-accent-yellow-1);
    background: var(--color-accent-yellow-2);
}

.btn-go-policy {
    font-family: Inter;
    font-size: 14px;
    font-style: normal;
    font-weight: 500;
    line-height: 16px;
    background: var(--guardian-primary-color, #0031ff) !important;
    color: var(--color-grey-white, #fff) !important;
}

.btn-create-multipolicy {
    font-family: Inter;
    font-size: 14px;
    font-style: normal;
    font-weight: 500;
    line-height: 16px;
    border-radius: 6px;
    border: 1px solid var(--color-secondary, #cdddfd) !important;
    background: var(--color-grey-white, #fff) !important;
    color: var(--guardian-primary-color, #0031ff) !important;
}

.loading {
    background: #fff;
    position: absolute;
    z-index: 99;
    top: 0;
    left: 0;
    bottom: 0;
    right: 0;
    display: flex;
    align-items: center;
    justify-items: center;
    justify-content: center;
    align-content: center;
}

.loading-progress {
    width: 80%;
    height: 80%;
}


.not-exist {
    color: var(--color-grey-black-2);
    font-family: Inter, serif;
    font-size: 20px;
    font-style: normal;
    font-weight: 400;
    line-height: 16px;
    display: flex;
    flex-direction: column;
    align-items: center;
    row-gap: 8px;
    justify-content: center;
}

.info-text {
    color: var(--color-grey-5, #848fa9);
    text-align: center;
    font-family: Inter, sans-serif;
    font-size: 16px;
    font-style: normal;
    font-weight: 400;
    line-height: normal;
}

.info-text-strong {
    color: var(--color-grey-5, #848fa9);
    text-align: center;
    font-family: Inter, sans-serif;
    font-size: 16px;
    font-style: normal;
    font-weight: 600;
    line-height: normal;
}

.opacity-icon {
    opacity: 1.0;
    cursor: pointer;
    transition: opacity 0.25s ease-in-out;
}

.opacity-icon:hover {
    opacity: 1.0;
}

.grid-table-container {
    background: #fff;
    border-top-left-radius: 8px;
    border-top-right-radius: 8px;
    overflow: hidden;

    ::ng-deep .grid-table {
        .p-datatable,
        .p-datatable-table-container,
        .p-datatable-scrollable-header,
        .p-datatable-scrollable-body,
        .p-datatable-wrapper {
            max-height: calc(-380px + 100vh);
            background: #fff;
        }

        .p-datatable-table,
        .p-datatable-thead,
        .p-datatable-tbody,
        .p-datatable-thead > tr > th,
        .p-datatable-tbody > tr,
        .p-datatable-tbody > tr > td {
            background: #fff;
        }

        .p-datatable-frozen-column {
            background: #fff;
            z-index: 3 !important;
        }

        .p-datatable-thead .p-datatable-frozen-column {
            z-index: 4 !important;
        }

        .cell-section-gap {
            padding-left: 25px !important;
        }

        .cell-status {
            min-width: 190px;
            width: 190px;
            max-width: 190px;
            padding-right: 24px !important;
        }
    }
}

@media screen and (max-width: 1450px) {
    .actions-container {
        flex-direction: column !important;
        align-items: flex-start !important;
    }

    .actions-container-btns {
        margin-left: 0px !important;
        margin-top: 16px !important;
        gap: 10px;

        &>*:first-of-type {
            margin-left: 0px !important;
        }
    }

    .grid-table-container {
        ::ng-deep .grid-table {
            .p-datatable-wrapper {
                max-height: calc(-445px + 100vh);
            }
        }
    }
}

.instance-btn {
    padding: 2px 20px 2px 12px;
    height: 30px;
    gap: 6px;
    width: 110px;
    min-width: 110px;
}

.disconnect-btn {
    padding: 2px 20px 2px 12px;
    height: 30px;
    gap: 6px;
    width: 130px;
    min-width: 130px;
}

.repository-btn {
    padding: 2px 20px 2px 12px;
    height: 30px;
    gap: 6px;
    width: 185px;
    min-width: 185px;
}

.DRAFT-status,
.DRAFT-dropdown ::ng-deep .p-select {
    background: var(--guardian-secondary-background);
    color: var(--color-primary);
    border: 1px solid var(--color-primary);
    // width: auto;
    width: 160px;
    min-width: 160px;

    .p-select-dropdown-icon {
        color: var(--color-primary);
    }
}

.DRY-RUN-status,
.DRY-RUN-dropdown ::ng-deep .p-select {
    background: var(--guardian-dry-run-background);
    color: var(--color-primary);
    border: 1px solid var(--color-primary);
    // width: auto;
    width: 160px;
    min-width: 160px;

    .p-select-dropdown-icon {
        color: var(--color-primary);
    }
}

.VIEW-status,
.PUBLISH-status,
.PUBLISH-dropdown ::ng-deep .p-select {
    background: var(--color-accent-green-2);
    color: var(--color-accent-green-1);
    border: 1px solid var(--color-accent-green-1);
    // width: auto;
    width: 160px;
    min-width: 160px;

    .p-select-dropdown-icon {
        color: var(--color-accent-green-1);
    }
}
/* ... */

